src/test/deca/syntax/invalid/synt/identifier_starting_with_digit.deca
/*
    Description : Création d'un identifiant commencant par un chiffre

    Résultat : Erreur syntaxique
*/
{
    int x = 5var;
}
